argocd/applications/identity/hydra-maester/templates/networkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hydra-maester
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hydra-maester
  egress:
    # Hydra admin API for OAuth2 client management
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: identity
      toPorts:
        - ports:
            - port: "4445"
              protocol: TCP
    # CRD watches and status updates
    - toEntities:
        - kube-apiserver
    # DNS resolution
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
            - port: "53"
              protocol: TCP
